# superdumb-ai

./: LICENSE  README.md  pyproject.toml
src/superdumb/: api.py  cli.py  config.py  engine.py  scale.py
src/superdumb/examples/: prompts.md  requests.http
src/superdumb/models/: local_backend.py  openai_backend.py
src/superdumb/safety/: filters.py  policy.py
src/superdumb/strategies/: analogy.py  base.py  citations.py  code_detour.py  contradiction.py  irrelevant.py  language_twister.py  numbers.py
src/superdumb/tests/: eval_harness.py  test_engine.py  test_strategies.py
