[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "superdumb-ai"
version = "0.1.0"
description = "An AI that is always wrong, on purpose."
authors = [{name="Garry Bamrah", email="gb.garrybamrah@gmail.com"}]
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "httpx",
  "python-dotenv",
  "openai>=1.0.0",
  "tiktoken",
  "langid",
  "numpy",
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
